cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_05432_cf-example-11.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy a VPC with 1 AZ, IGW, DMZ, and ES.
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: VPC Configuration Parameters
        Parameters:
          - pmVpcId
          - pmVpcCidr
          - pmVpcRegion
          - pmAz
          - pmPubSubnetCidr
      - Label:
          default: EC2 Configuration Parameters
        Parameters:
          - pmEc2ImageId
          - pmEc2InstanceType
          - pmEc2VolumeSize
          - pmAccessKeyId
      - Label:
          default: ElasticSearch Configuration Parameters
        Parameters:
          - pmEsVersion
          - pmEsDomainName
          - pmEsEc2InstanceType
          - pmEsEbsVolumeSize
    ParameterLabels:
      pmVpcId:
        default: Enter VPC id
      pmVpcCidr:
        default: Enter VPC CIDR
      pmVpcRegion:
        default: Enter VPC region
      pmAz:
        default: Enter VPC AZ
      pmPubSubnetCidr:
        default: Enter VPC public subnet
      pmEc2ImageId:
        default: Enter EC2 image id
      pmEc2InstanceType:
        default: Enter EC2 instance type
      pmEc2VolumeSize:
        default: Enter EC2 volume
      pmAccessKeyId:
        default: Enter EC2 SSH access key
      pmEsVersion:
        default: Enter ES version
      pmEsDomainName:
        default: Enter ES domain
      pmEsEc2InstanceType:
        default: Enter ES EC2 instance type
      pmEsEbsVolumeSize:
        default: Enter ES EBS volume size
Parameters:
  pmVpcId:
    Type: String
    Default: POC
  pmVpcRegion:
    Type: String
    Default: us-east-1
  pmVpcCidr:
    Type: String
    Default: 10.0.0.0/16
  pmPubSubnetCidr:
    Type: String
    Default: 10.0.10.0/24
  pmAz:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1a
  pmEc2ImageId:
    Type: String
    Default: ami-28456852
  pmEc2InstanceType:
    Type: String
    Default: t2.micro
  pmEc2VolumeSize:
    Type: Number
    Default: '5'
  pmAccessKeyId:
    Type: AWS::EC2::KeyPair::KeyName
    Default: aws_cory1
  pmEsDomainName:
    Type: String
    Default: poc-es
  pmEsVersion:
    Type: String
    Default: '5.5'
  pmEsEc2InstanceType:
    Type: String
    Default: t2.small.elasticsearch
  pmEsEbsVolumeSize:
    Type: String
    Default: '10'
Mappings: {}
Resources:
  EsDomain:
    Type: AWS::Elasticsearch::Domain
    Properties:
      DomainName: !Ref 'pmEsDomainName'
      ElasticsearchVersion: !Ref 'pmEsVersion'
      ElasticsearchClusterConfig:
        InstanceCount: '1'
        InstanceType: !Ref 'pmEsEc2InstanceType'
      EBSOptions:
        EBSEnabled: 'true'
        Iops: 0
        VolumeSize: !Ref 'pmEsEbsVolumeSize'
        VolumeType: standard
      SnapshotOptions:
        AutomatedSnapshotStartHour: '0'
      AccessPolicies:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              AWS: '*'
            Action: es:*
            Resource: '*'
      AdvancedOptions:
        rest.action.multi.allow_explicit_index: 'true'
      Tags:
        - Key: Name
          Value: POC-ES
      VPCOptions:
        SubnetIds:
          - !Ref 'PublicSubnet'
        SecurityGroupIds:
          - !Ref 'DMZSG'
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref 'pmVpcCidr'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref 'pmVpcId'
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmVpcId'
              - IGW
  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'IGW'
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPubSubnetCidr'
      AvailabilityZone: !Ref 'pmAz'
      Tags:
        - Key: Type
          Value: Public
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmPubSubnetCidr'
              - !Ref 'pmAz'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Public Route Table
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: IGWAttach
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'IGW'
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet'
      RouteTableId: !Ref 'PublicRouteTable'
  DMZSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'VPC'
      GroupName: DMZ-SG
      GroupDescription: Enable SSH access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: DMZ-SG
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref 'EC2InstanceRole'
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: POC-ACCESS
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: ''
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess
        - arn:aws:iam::aws:policy/AmazonS3FullAccess
        - arn:aws:iam::aws:policy/AWSLambdaFullAccess
        - arn:aws:iam::aws:policy/AmazonSSMFullAccess
        - arn:aws:iam::aws:policy/AmazonESFullAccess
        - arn:aws:iam::aws:policy/IAMReadOnlyAccess
  DMZ:
    Type: AWS::EC2::Instance
    DependsOn: IGWAttach
    Properties:
      InstanceType: !Ref 'pmEc2InstanceType'
      ImageId: !Ref 'pmEc2ImageId'
      KeyName: !Ref 'pmAccessKeyId'
      NetworkInterfaces:
        - GroupSet:
            - !Ref 'DMZSG'
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref 'PublicSubnet'
      IamInstanceProfile: !Ref 'EC2InstanceProfile'
      UserData: !Base64
        Fn::Join:
          - ''
          - - "#!/bin/bash -v\n"
            - "yum update -y\n"
            - "yum install -y aws-cli epel-release telnet zip unzip tree\n"
            - "yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_386/amazon-ssm-agent.rpm\n"
            - "start amazon-ssm-agent\n"
            - "easy_install pip\n"
            - "/usr/local/bin/pip install elasticsearch\n"
            - "/usr/local/bin/pip install requests-aws4auth\n"
            - "/usr/local/bin/pip install boto3\n"
            - "/usr/local/bin/pip install -U requests\n"
      Tags:
        - Key: Name
          Value: DMZ
Outputs:
  VPC:
    Value: !Ref 'VPC'
  IGW:
    Value: !Ref 'IGW'
  DMZ:
    Value: !Ref 'DMZ'
  ESDomainArn:
    Value: !GetAtt 'EsDomain.DomainArn'
  ESDomainEndpoint:
    Value: !GetAtt 'EsDomain.DomainEndpoint'
